<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".login.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forgot_password_description"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEmailId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/input_backgroup_login"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/resetPassBtn"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signIn"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="Sign In"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    </LinearLayout>

</ScrollView>