<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Create New Account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/input_backgroup_login"
            android:hint="@string/signUpName"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputEmailId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/input_backgroup_login"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/input_backgroup_login"
            android:hint="@string/sign_up_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/input_backgroup_login"
            android:hint="@string/sign_up_confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/signUpBtn"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signIn"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Sign In"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>